check_errors_v3.txt
    Checking racing-wheel-engine v0.1.0 (H:\Code\Rust\OpenRacing\crates\engine)
   Compiling racing-wheel-ui v0.1.0 (H:\Code\Rust\OpenRacing\crates\ui)
error[E0432]: unresolved import `super::Seqlock`
  --> crates\engine\src\hid\windows.rs:14:83
   |
14 |     DeviceTelemetryReport, HidDeviceInfo, MAX_TORQUE_REPORT_SIZE, MozaInputState, Seqlock,
   |                                                                                   ^^^^^^^ no `Seqlock` in `hid`

error[E0433]: cannot find `WindowsHidPort` in `windows`
  --> crates\engine\src\hid\mod.rs:34:30
   |
34 |         Ok(Box::new(windows::WindowsHidPort::new()?))
   |                              ^^^^^^^^^^^^^^ could not find `WindowsHidPort` in `windows`

error[E0425]: cannot find function `apply_windows_rt_setup` in module `windows`
   --> crates\engine\src\hid\mod.rs:261:22
    |
261 |             windows::apply_windows_rt_setup()?;
    |                      ^^^^^^^^^^^^^^^^^^^^^^ not found in `windows`

error[E0425]: cannot find function `revert_windows_rt_setup` in module `windows`
   --> crates\engine\src\hid\mod.rs:276:22
    |
276 |             windows::revert_windows_rt_setup()?;
    |                      ^^^^^^^^^^^^^^^^^^^^^^^ not found in `windows`

warning: unused imports: `DeviceTelemetryReport`, `HidDeviceInfo`, `MAX_TORQUE_REPORT_SIZE`, `MozaInputState`, `encode_torque_report_for_device`, and `vendor`
  --> crates\engine\src\hid\windows.rs:14:5
   |
14 |     DeviceTelemetryReport, HidDeviceInfo, MAX_TORQUE_REPORT_SIZE, MozaInputState, Seqlock,
   |     ^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^
15 |     encode_torque_report_for_device, vendor,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  ^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused imports: `DeviceHealthStatus`, `HidDevice`, and `HidPort`
  --> crates\engine\src\hid\windows.rs:17:20
   |
17 | use crate::ports::{DeviceHealthStatus, HidDevice, HidPort};
   |                    ^^^^^^^^^^^^^^^^^^  ^^^^^^^^^  ^^^^^^^

warning: unused imports: `DeviceEvent`, `DeviceInfo`, `RTError`, `RTResult`, and `TelemetryData`
  --> crates\engine\src\hid\windows.rs:18:13
   |
18 | use crate::{DeviceEvent, DeviceInfo, RTError, RTResult, TelemetryData};
   |             ^^^^^^^^^^^  ^^^^^^^^^^  ^^^^^^^  ^^^^^^^^  ^^^^^^^^^^^^^

warning: unused import: `async_trait::async_trait`
  --> crates\engine\src\hid\windows.rs:19:5
   |
19 | use async_trait::async_trait;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `hidapi::HidApi`
  --> crates\engine\src\hid\windows.rs:20:5
   |
20 | use hidapi::HidApi;
   |     ^^^^^^^^^^^^^^

warning: unused imports: `Mutex` and `RwLock`
  --> crates\engine\src\hid\windows.rs:21:19
   |
21 | use parking_lot::{Mutex, RwLock};
   |                   ^^^^^  ^^^^^^

warning: unused import: `racing_wheel_schemas::prelude::*`
  --> crates\engine\src\hid\windows.rs:22:5
   |
22 | use racing_wheel_schemas::prelude::*;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::collections::HashMap`
  --> crates\engine\src\hid\windows.rs:23:5
   |
23 | use std::collections::HashMap;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `Arc`, `AtomicBool`, `AtomicU32`, `OnceLock`, and `Ordering`
  --> crates\engine\src\hid\windows.rs:25:5
   |
25 |     Arc, OnceLock,
   |     ^^^  ^^^^^^^^
26 |     atomic::{AtomicBool, AtomicU32, Ordering},
   |              ^^^^^^^^^^  ^^^^^^^^^  ^^^^^^^^

warning: unused imports: `Duration` and `Instant`
  --> crates\engine\src\hid\windows.rs:28:17
   |
28 | use std::time::{Duration, Instant};
   |                 ^^^^^^^^  ^^^^^^^

warning: unused import: `tokio::sync::mpsc`
  --> crates\engine\src\hid\windows.rs:29:5
   |
29 | use tokio::sync::mpsc;
   |     ^^^^^^^^^^^^^^^^^

warning: unused imports: `debug`, `error`, `info`, `trace`, and `warn`
  --> crates\engine\src\hid\windows.rs:30:15
   |
30 | use tracing::{debug, error, info, trace, warn};
   |               ^^^^^  ^^^^^  ^^^^  ^^^^^  ^^^^

warning: unused imports: `Win32::Storage::FileSystem::*`, `Win32::System::IO::*`, `Win32::System::LibraryLoader::GetModuleHandleW`, and `Win32::System::Threading::*`
  --> crates\engine\src\hid\windows.rs:33:27
   |
33 |     Win32::Foundation::*, Win32::Storage::FileSystem::*, Win32::System::IO::*,
   |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^
34 |     Win32::System::LibraryLoader::GetModuleHandleW, Win32::System::Threading::*,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^^^^^^^

Some errors have detailed explanations: E0425, E0432, E0433.
For more information about an error, try `rustc --explain E0425`.
warning: `racing-wheel-engine` (lib) generated 13 warnings
error: could not compile `racing-wheel-engine` (lib) due to 4 previous errors; 13 warnings emitted
